--- a/style/style.css
+++ b/style/style.css
@@ -108,7 +108,11 @@
     margin-right: 1px;
 
 }
-
+#info {
+    margin-top: 100px;
+    width: 100%;
+    height: 200px;
+}
 .calendar .calendar-dates .days .day.selected
 {
     background-color: #1caff6;
